fix: update icon button background color for better visibility

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a:link, a:active{
 
 .icon-button{
     padding: 3rem 4rem;
-    background-color: #F0F8DA ;
+    background-color: #FFFFFF ;
     border: #8CAB3E  solid 1.5px;
     border-radius: 1rem;
     font-size: 3rem;
